--- a/front-web/cadastro-veiculos-front/src/styles.scss
+++ b/front-web/cadastro-veiculos-front/src/styles.scss
@@ -1,1 +1,56 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~primeng/resources/primeng.min.css";
+@import "~primeng/resources/themes/bootstrap4-light-blue/theme.css";
+@import '~primeicons/primeicons.css';
+
+body {
+  font-family: Arial, Verdana, sans-serif;
+  color: #404C51;
+  margin: 0;
+}
+
+label {
+  font-weight: bold;
+}
+
+/*Só vai aplicar .container se a largura da tela for no mínimo 1200px*/
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+    margin: 0 auto;
+  }
+}
+
+.col-value {
+  width: 120px;
+  text-align: right;
+}
+
+.col-date {
+  width: 120px;
+  text-align: center;
+}
+
+.col-actions {
+  width: 90px;
+  text-align: center;
+}
+
+.launch-button {
+  left: -9px;
+}
+
+.trash-button {
+  background-color: red !important;
+  border: red !important;
+}
+
+.edit-button, .trash-button {
+  height: 25px;
+  width: 40px;
+}
+
+.ui-dropdown-filter-container {
+  width: 30%;
+}
+
