Mudança de serviço de mensagem no frontend para adaptar ao Angular 11

--- a/front-web/cadastro-veiculos-front/src/styles.scss
+++ b/front-web/cadastro-veiculos-front/src/styles.scss
@@ -2,7 +2,7 @@
 @import "~primeng/resources/primeng.min.css";
 @import "~primeng/resources/themes/bootstrap4-light-blue/theme.css";
 @import '~primeicons/primeicons.css';
-@import "~ng2-toasty/style-bootstrap.css";
+@import '~ngx-toastr/toastr';
 
 body {
   font-family: Arial, Verdana, sans-serif;
